package com.bankplatform.account.entity;

public enum AccountStatus {
    ACTIVE,
    FROZEN,
    CLOSED,
    PENDING
}
