package com.bankplatform.account.entity;

public enum AccountType {
    COURANT,
    EPARGNE,
    MOBILE_MONEY
}
