package com.bankplatform.auth.entity;

public enum UserRole {
    CLIENT,
    OPERATOR_ADMIN,
    OPERATOR_ANALYST,
    SUPER_ADMIN
}
