package com.bankplatform.customer.entity;

public enum CustomerStatus {
    PENDING,
    UNDER_REVIEW,
    VERIFIED,
    ACTIVE,
    SUSPENDED,
    REJECTED
}
