package com.bankplatform.transaction.entity;

public enum TransactionType {
    DEPOT,
    RETRAIT,
    TRANSFERT_INTRA,
    TRANSFERT_INTER,
    REMBOURSEMENT_PRET,
    DECAISSEMENT_PRET
}
